# op_knowledge_base

./: .gitignore  config.yaml  pyproject.toml
docs/: PLAN.md
scripts/: verify_foundation.py
src/op_knowledge_base/: change_detection.py  cli.py  config.py  ingestion.py  models.py  query.py  status.py  store.py
src/op_knowledge_base/sources/: confluence.py  git.py
tests/: test_change_detection.py  test_confluence.py  test_git.py  test_ingestion.py  test_query.py  test_status.py  test_store.py
