[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

name = "op-knowledge-base"
version = "0.1.0"
description = "RAG system for evolving knowledge sources (Confluence + Git)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.7",
    "chromadb>=1.5.9",
    "click>=8.4.1",
    "gitpython>=3.1.50",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
rag = "op_knowledge_base.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/op_knowledge_base"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
